--- a/public/style.css
+++ b/public/style.css
@@ -243,7 +243,7 @@ h2 {
   outline-color: var(--primary-color-darker);
 }
 
-#superapp {
+#app {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -256,7 +256,7 @@ h2 {
   align-content: center;
 }
 
-#app {
+#game {
   image-rendering: crisp-edges;
   image-rendering: pixelated;
 }
