--- a/public/style.css
+++ b/public/style.css
@@ -263,7 +263,6 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 #app-wrapper {
@@ -278,7 +277,7 @@ h2 {
 }
 
 #joystick {
-  position: absolute;
+  position: fixed;
 }
 
 @keyframes end-game-text-animation {
