Annulation du dernier commit

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -271,6 +271,11 @@ h2 {
   align-content: center;
 }
 
+#game {
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
 #joystick {
   position: fixed;
 }
